# ygor

./: .gitignore  LICENSE  Makefile.am  WIP  armnod.cc  common.cc  common.h  configure.ac  data.cc  guacamole.cc  guacamole.h  guacamole_amd64.s  halffloat.cc  halffloat.h  test-salsa208-guacamole.cc  visibility.h  ygor-armnod.cc  ygor-cdf.cc  ygor-cli.cc  ygor-dump.cc  ygor-guacamole.cc  ygor-inspect.cc  ygor-internal.h  ygor-merge.cc  ygor-percentile.cc  ygor-percentiles.cc  ygor-self-measure.cc  ygor-summarize.cc  ygor-t-test.cc  ygor-timeseries.cc  ygor.cc  ygor.h  ygor.pc.in  ygor.py
bindings/go/ygor/: ygor.go
bindings/java/: net_rescrv_ygor_DataLogger.c  net_rescrv_ygor_DataLogger.h
bindings/java/net/rescrv/ygor/: DataLogger.java
include/ygor/: armnod.h  data.h  guacamole.h
m4/: anal_warnings.m4
ygor/: __init__.py  collect.pyx  graph.py
